[gd_scene load_steps=10 format=3 uid="uid://rq3efqdy66xw"]

[ext_resource type="Script" path="res://scripts/test/tile_test_ui.gd" id="1_q1e2d"]
[ext_resource type="PackedScene" uid="uid://b44j75qn2rokx" path="res://scenes/food_button.tscn" id="2_470cb"]
[ext_resource type="Resource" uid="uid://bow735rfmv3ec" path="res://resources/food/cow.tres" id="3_2xh7s"]
[ext_resource type="Script" path="res://scripts/placeable_button.gd" id="3_gbu8b"]
[ext_resource type="Script" path="res://scripts/food_button.gd" id="4_546um"]
[ext_resource type="Resource" uid="uid://6kpy82vxwyb0" path="res://resources/placeable/road.tres" id="4_qjs1w"]
[ext_resource type="Resource" uid="uid://fcp8hphhpdlr" path="res://resources/placeable/grill.tres" id="4_wq4ng"]
[ext_resource type="Resource" uid="uid://ejv8gpwu7j5y" path="res://resources/placeable/field.tres" id="5_orbvy"]
[ext_resource type="Resource" uid="uid://c37unjfqlf04h" path="res://resources/placeable/warehouse.tres" id="6_bl3hl"]

[node name="TileTestUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q1e2d")

[node name="FoodBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 480.0

[node name="CowButton" parent="FoodBox" instance=ExtResource("2_470cb")]
layout_mode = 2
text = "Cow"
attached_food = ExtResource("3_2xh7s")

[node name="InventoryBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 480.0
offset_right = 256.0
offset_bottom = 720.0

[node name="InventoryLabel" type="Label" parent="InventoryBox"]
layout_mode = 2
text = "Inventory
"

[node name="InventorySlot0" type="Button" parent="InventoryBox"]
layout_mode = 2
text = "Empty"
script = ExtResource("4_546um")

[node name="InventorySlot1" type="Button" parent="InventoryBox"]
layout_mode = 2
text = "Empty
"
script = ExtResource("4_546um")

[node name="InventorySlot2" type="Button" parent="InventoryBox"]
layout_mode = 2
text = "Empty
"
script = ExtResource("4_546um")

[node name="CurrentItemLabel" type="Label" parent="InventoryBox"]
visible = false
layout_mode = 2
text = "Default"

[node name="TrashButton" type="Button" parent="InventoryBox"]
visible = false
layout_mode = 2
text = "Trash"

[node name="OrderQueueBox" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 768.0
offset_right = 1024.0
offset_bottom = 240.0

[node name="SubmitButton" type="Button" parent="OrderQueueBox"]
layout_mode = 2
text = "Submit Order"

[node name="OrderTitle" type="Label" parent="OrderQueueBox"]
layout_mode = 2
text = "Current Orders"
horizontal_alignment = 1

[node name="CurrentOrders" type="Label" parent="OrderQueueBox"]
layout_mode = 2
horizontal_alignment = 1

[node name="BuildBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1024.0
offset_right = 1280.0
offset_bottom = 480.0

[node name="BuildModeButton" type="Button" parent="BuildBox"]
layout_mode = 2
text = "Toggle Build Mode"

[node name="BuildButtonBox" type="VBoxContainer" parent="BuildBox"]
visible = false
layout_mode = 2

[node name="BuildGrillButton" type="Button" parent="BuildBox/BuildButtonBox"]
layout_mode = 2
text = "Build Grill"
script = ExtResource("3_gbu8b")
attached_placeable = ExtResource("4_wq4ng")

[node name="BuildFieldButton" type="Button" parent="BuildBox/BuildButtonBox"]
layout_mode = 2
text = "Build Field"
script = ExtResource("3_gbu8b")
attached_placeable = ExtResource("5_orbvy")

[node name="BuildWarehouseButton" type="Button" parent="BuildBox/BuildButtonBox"]
layout_mode = 2
text = "Build Warehouse"
script = ExtResource("3_gbu8b")
attached_placeable = ExtResource("6_bl3hl")

[node name="BuildRoadButton" type="Button" parent="BuildBox/BuildButtonBox"]
layout_mode = 2
text = "Build Road"
script = ExtResource("3_gbu8b")
attached_placeable = ExtResource("4_qjs1w")

[node name="CurrentPlaceable" type="Label" parent="BuildBox/BuildButtonBox"]
visible = false
layout_mode = 2

[node name="PlaceableBox" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 1024.0
offset_top = 480.0
offset_right = 1280.0
offset_bottom = 720.0

[node name="PrepBox" type="VBoxContainer" parent="PlaceableBox"]
visible = false
layout_mode = 2

[node name="PrepLabel" type="Label" parent="PlaceableBox/PrepBox"]
layout_mode = 2

[node name="PrepButton" type="Button" parent="PlaceableBox/PrepBox"]
visible = false
layout_mode = 2
text = "Test"
script = ExtResource("3_gbu8b")

[node name="StorageBox" type="VBoxContainer" parent="PlaceableBox"]
visible = false
layout_mode = 2

[connection signal="pressed_with_food" from="FoodBox/CowButton" to="." method="_on_food_button_pressed"]
[connection signal="pressed" from="InventoryBox/InventorySlot0" to="." method="_on_inventory_slot_0_pressed"]
[connection signal="pressed" from="InventoryBox/InventorySlot1" to="." method="_on_inventory_slot_1_pressed"]
[connection signal="pressed" from="InventoryBox/InventorySlot2" to="." method="_on_inventory_slot_2_pressed"]
[connection signal="pressed" from="InventoryBox/TrashButton" to="." method="_on_trash_button_pressed"]
[connection signal="pressed" from="OrderQueueBox/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="BuildBox/BuildModeButton" to="." method="_on_build_mode_button_pressed"]
[connection signal="pressed" from="BuildBox/BuildButtonBox/BuildGrillButton" to="." method="_on_build_grill_button_pressed"]
[connection signal="pressed_with_placeable" from="BuildBox/BuildButtonBox/BuildGrillButton" to="." method="_on_build_button_pressed"]
[connection signal="pressed_with_placeable" from="BuildBox/BuildButtonBox/BuildFieldButton" to="." method="_on_build_button_pressed"]
[connection signal="pressed_with_placeable" from="BuildBox/BuildButtonBox/BuildWarehouseButton" to="." method="_on_build_button_pressed"]
[connection signal="pressed_with_placeable" from="BuildBox/BuildButtonBox/BuildRoadButton" to="." method="_on_build_button_pressed"]
[connection signal="pressed_with_placeable" from="PlaceableBox/PrepBox/PrepButton" to="." method="_on_placeable_button_pressed"]
